Fixed the SetupHelp view on mobile

--- a/JungleReader/src/assets/base.css
+++ b/JungleReader/src/assets/base.css
@@ -83,6 +83,7 @@
 }
 
 body {
+  max-width: 100vw;
   min-height: 100vh;
   color: var(--main-text);
   background: var(--main-bg);
